# ClassificationHealthDiabetes

./: README.md  pyproject.toml
Notebooks/: anova_results.txt  diabetes.ipynb  diabetes_meh.ipynb
Notebooks/mlruns/0/: meta.yaml
Notebooks/mlruns/590621186025581501/: meta.yaml
Notebooks/mlruns/590621186025581501/tags/: Topic
Streamlit/: ui.py
api/: __init__.py  fastapi.py  patientService.py
models/: AdaBoostClassifier.joblib  adaboost_model.joblib
src/: dataload.py  evaluate.py  evaluation.py  predict.py  preprocess.py  train.py
