[project]
name = "classificationhealthdiabetes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "supe29", email = "kaustubh.supe@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.1",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.4",
]

[project.scripts]
classificationhealthdiabetes = "classificationhealthdiabetes:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
